--- a/filedocker/Dockerfile
+++ b/filedocker/Dockerfile
@@ -2,6 +2,6 @@ FROM nginx:1.27.0
 
 ADD conf /etc/nginx
 
-ADD content /usr/share/nginx/html
+ADD filedocker/content /usr/share/nginx/html
 
 EXPOSE 80
