--- a/myapp-deploy.yml
+++ b/myapp-deploy.yml
@@ -1,39 +1,38 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: nginx-web
   labels:
-    app: app-web
-  name: app-web
-  namespace: default
+    app: nginx-web
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
-      app: app-web
+      app: nginx-web
   template:
     metadata:
       labels:
-        app: app-web
+        app: nginx-static
     spec:
       containers:
-        - image: chinchanchontom/acc-info:latest
-          imagePullPolicy: IfNotPresent
-          name: app-web
-      terminationGracePeriodSeconds: 30
+        - name: nginx
+          image: chinchanchontom/acc-info:latest
+          ports:
+            - containerPort: 80
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-web
-  namespace: default
+  name: nginx-web
+  labels:
+    app: nginx-web
 spec:
-  ports:
-    - name: web
-      port: 80
-      targetPort: 80
-      nodePort: 30080
-  selector:
-    app: app-web
   type: NodePort
+  ports:
+    - port: 80
+      targetPort: 80
+      nodePort: 32001
+  selector:
+    app: nginx-static
 
